--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.344.0",
     "ogl": "^1.0.11",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^10.3.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
